--- a/TM/Makefile
+++ b/TM/Makefile
@@ -1,10 +1,10 @@
-# Makefile Generated Thu Mar 15 13:24:49 EDT 2012
+# Makefile Generated Fri Mar 16 15:04:56 UTC 2012
 MNC=HFEMS
 HOMEDIR=/home/hfems/src/TM
 SPECFILE=HFEMS.spec
 SRC=a2b.c a2bnew.c a2b HFEMS.fld sonic.h a2b10hz.c types.tmc
 SRC+=HFEMS.tmc HFEMScol.tmc HFEMS.cmd HFEMS.doit HFEMS.tbl HFEMS.sol
-SRC+=HFEMS.tma
+SRC+=HFEMS.tma HFEMSeddy.edf
 TOOL=HFEMS.spec Makefile
 SCRIPT=interact HFEMS.dccc
 OBJ=address.h HFEMScol.cc HFEMS.pcm tm.dac HFEMScoloui.c
@@ -13,11 +13,13 @@ OBJ+=HFEMSsrvroui.c HFEMSsrvroui.o HFEMSdoit.dep HFEMStbl.tmc
 OBJ+=HFEMSdisp.cc HFEMSdispoui.c HFEMSdispoui.o HFEMSdisp.o
 OBJ+=HFEMStblnc.tmc HFEMSdispnc.cc HFEMSdispncoui.c HFEMSdispncoui.o
 OBJ+=HFEMSdispnc.o HFEMSalgoa.tmc HFEMSalgo.cc HFEMSalgooui.c
-OBJ+=HFEMSalgooui.o HFEMSalgo.o HFEMSclt.o HFEMScltoui.c
-OBJ+=HFEMScltoui.o HFEMScltnc.o HFEMScltncoui.c HFEMScltncoui.o
+OBJ+=HFEMSalgooui.o HFEMSalgo.o HFEMSeddyextedf.oui HFEMSeddyext.tmc
+OBJ+=HFEMSeddyext.cc HFEMSeddyextoui.c HFEMSeddyextoui.o
+OBJ+=HFEMSeddyext.o HFEMSclt.o HFEMScltoui.c HFEMScltoui.o
+OBJ+=HFEMScltnc.o HFEMScltncoui.c HFEMScltncoui.o
 TGT=HFEMScol HFEMSsrvr HFEMSdoit HFEMSdisp HFEMSdispnc HFEMS.sft
-TGT+=HFEMSalgo HFEMSclt HFEMScltnc
-DISTRIB=HFEMS.sft ../sonic/sonic HFEMS.pcm tm.dac
+TGT+=HFEMSalgo HFEMSeddyext HFEMSclt HFEMScltnc
+DISTRIB=HFEMS.sft ../sonic/Sonic HFEMS.pcm tm.dac
 IDISTRIB=Experiment.config VERSION HFEMSdoit
 SRCDIST=HFEMS.tbl HFEMS.sol HFEMS.tma types.tmc HFEMS.tmc
 NONRCS=
@@ -66,6 +68,9 @@ HFEMS.sft : HFEMS.sol
 HFEMSalgo : HFEMSalgo.o HFEMSalgooui.o
 	$(LINK.normCXX) HFEMSalgo.o HFEMSalgooui.o -ltmpp -ltm -lnort
 	$(OUIUSE) HFEMSalgooui.c
+HFEMSeddyext : HFEMSeddyext.o HFEMSeddyextoui.o
+	$(LINK.normCXX) HFEMSeddyext.o HFEMSeddyextoui.o -ltmpp -ltm -lssp -lmem -lm -lnort
+	$(OUIUSE) HFEMSeddyextoui.c
 HFEMSclt : HFEMSclt.o HFEMScltoui.o
 	$(LINK.normCXX) HFEMSclt.o HFEMScltoui.o -ltmph -lph -ltmpp -ltm -lnort
 	$(OUIUSE) HFEMScltoui.c
@@ -113,6 +118,16 @@ HFEMSalgooui.c : $(OUIDIR)/tma.oui $(OUIDIR)/dc.oui $(OUIDIR)/msg.oui
 	$(OUI) $(OUIDIR)/tma.oui $(OUIDIR)/dc.oui $(OUIDIR)/msg.oui
 HFEMSalgooui.o : HFEMSalgooui.c
 HFEMSalgo.o : HFEMSalgo.cc
+HFEMSeddyextedf.oui : HFEMSeddy.edf
+	$(EDF2OUI) HFEMSeddy.edf
+HFEMSeddyext.tmc : HFEMSeddy.edf
+	$(EDF2EXT) HFEMSeddy.edf
+HFEMSeddyext.cc : types.tmc HFEMS.tmc HFEMSeddyext.tmc
+	$(TMC) types.tmc HFEMS.tmc HFEMSeddyext.tmc
+HFEMSeddyextoui.c : HFEMSeddyextedf.oui $(OUIDIR)/dc.oui $(OUIDIR)/msg.oui
+	$(OUI) HFEMSeddyextedf.oui $(OUIDIR)/dc.oui $(OUIDIR)/msg.oui
+HFEMSeddyextoui.o : HFEMSeddyextoui.c
+HFEMSeddyext.o : HFEMSeddyext.cc
 HFEMSclt.o : HFEMScmd.cc
 	$(COMPILE.clt) HFEMScmd.cc
 HFEMScltoui.c : $(OUIDIR)/kbdclt.oui $(OUIDIR)/msg.oui
