HFEMS tma updated to use the flow and pressure setpoints determined by running the system HFEMS.sol updated to use CO2_cal3 and calA as intended after the board was repaired 1

--- a/TM/Experiment.config
+++ b/TM/Experiment.config
@@ -2,8 +2,7 @@ Experiment=HFEMS
 HomeDir=/home/hfems
 #FlightNode=hfems
 SCRIPT_OVERRIDE=$HomeDir/script
-
 RunLog=saverun.log
 RunType=ask
 Dircksum=maybe
-
+Extractions= "HFEMSallext "
