--- a/TM/Experiment.config
+++ b/TM/Experiment.config
@@ -3,6 +3,6 @@ HomeDir=/home/hfems
 #FlightNode=hfems
 SCRIPT_OVERRIDE=$HomeDir/script
 RunLog=saverun.log
-RunType=ask
-Dircksum=maybe
-Extractions= "HFEMSallext "
+RunType=raw/data
+Dircksum=yes
+Extractions="HFEMSallext "
